--- a/cookbooks/nginx/templates/default/index.html.erb
+++ b/cookbooks/nginx/templates/default/index.html.erb
@@ -769,7 +769,7 @@ body.outlook p {
                           <tr>
 
                             <td class="twelve sub-columns">
-                              <span class="template-label">CAKE VAGRANT</span>
+                              <span class="template-label">Vagrant CakePHP</span>
                             </td>
                             <td class="expander"></td>
 
@@ -798,7 +798,11 @@ body.outlook p {
                       <table class="twelve columns">
                         <tr>
                           <td class="panel">
-                            <p style="text-align:center;padding-bottom:0;">Replace the <strong><code>app</code></strong> directory with your application and you'll be off to the races!</p>
+                            <p style="text-align:center;padding-bottom:0;">1- Set <strong><code>cgi.fix_pathinfo = 0</code></strong> in php.ini</p>
+                          </td>
+                          <td class="expander"></td>
+                          <td class="panel">
+                            <p style="text-align:center;padding-bottom:0;">2- Place your CakePHP app in <strong><code>vagrant-cakephp/{App name you choose before the install, if you didn't, use 'app'}</code></strong>. The webroot path should be : vagrant-cakephp/{app}/app/webroot</p>
                           </td>
                           <td class="expander"></td>
                         </tr>
@@ -816,8 +820,7 @@ body.outlook p {
                         <tbody><tr>
                           <td align="center">
                             <center>
-                              <a href="https://github.com/josegonzalez/cake-vagrant#cake-vagrant" class="btn-primary">Read more instructions on GitHub</a>
-                              <p style="font-size:80%;text-align:center;"><a href="https://github.com/josegonzalez/cake-vagrant">cake-vagrant</a> provided by <a href="http://friendsofcake.com/">FriendsOfCake</a></p>
+                              <a href="https://github.com/szerhoudi/vagrant-cakephp#custom-domain-name" class="btn-primary">Read more instructions on GitHub</a>
                             </center>
                           </td>
                           <td class="expander"></td>
